--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ setuptools==67.8.0
 sqlparse==0.4.4
 wheel==0.40.0
 django-bootstrap5==23.3
+gunicorn==20.1.0
+django-environ==0.10.0
+whitenoise==6.4.0
