--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ media
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
 
+.env
