--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 asgiref==3.7.2
 Django==4.2.2
 pip==23.1.2
-setuptools==67.8.0
+setuptools==68.0.0
 sqlparse==0.4.4
 wheel==0.40.0
 django-bootstrap5==23.3
 gunicorn==20.1.0
 django-environ==0.10.0
-whitenoise==6.4.0
+whitenoise==6.5.0
+google-cloud-secret-manager==2.16.1
